force-app/main/default/objects/Test_Step__c/Test_Step__c.object-meta.xml
<CustomObject>
    <description>For documenting the steps to take for a specific Test Script</description>
    <label>Test Step</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Step ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>