force-app/main/default/objects/Test_Step__c/fields/Expected_Results__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results__c</fullName>
    <label>Expected Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>