force-app/main/default/objects/Test_Step__c/fields/Known_Inputs__c.field-meta.xml
<CustomField>
    <fullName>Known_Inputs__c</fullName>
    <label>Known Inputs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>