force-app/main/default/objects/Test_Step__c/listViews/All_Test_Steps.listView-meta.xml
<ListView>
    <fullName>All_Test_Steps</fullName>
    <columns>NAME</columns>
    <columns>Step_Number__c</columns>
    <columns>Known_Inputs__c</columns>
    <columns>Expected_Results__c</columns>
    <columns>Test_Script__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Steps</label>
</ListView>